test/src/e2e_vm_tests/test_programs/should_fail/language/reexport/shadowing_in_reexporting_module/src/lib_2.sw
library;

pub use ::items_2_1::*;

use ::items_2_2::Items2_Struct;
use ::items_2_2::Items2_Enum;
use ::items_2_2::ITEMS_2_FUNCTION_RES;
use ::items_2_2::items_2_function;
use ::items_2_2::Items2Trait;
